# Triumph-Synergy-Digital-Financial-Ecosystem

./: .dockerignore  .env  .env.example  .env.legal-contracts.example  .env.local.example  .env.production  .env.testnet  .env.txt  .env.vercel  .env.vercel.prod  .gitignore  .gitmodules  .vercel-env-setup.ps1  .vercelignore  00_READ_ME_FIRST_AUDIT_COMPLETE.md  ALL_8_TODOS_COMPLETE.md  AUDIT_SUMMARY.md  BIOMETRIC_IMPLEMENTATION_COMPLETE.md  BUILD_VERIFICATION_COMPLETE.md  CHAINLINK_INTEGRATION_COMPLETE.md  CHAINLINK_INTEGRATION_SUMMARY.md  CHANGELOG.md  CODE_QUALITY_GRADE.md  COMPLETE_DEPLOYMENT_SUCCESS.md  COMPLETION_SUMMARY.md  COMPLIANCE_IMPLEMENTATION_COMPLETE.md  COMPLIANCE_SYSTEM_INDEX.ts  COMPREHENSIVE_PI_AUDIT_REPORT.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRACT_MANAGEMENT_INDEX.md  CONTRIBUTING.md  CORRECT_VALIDATED_DOMAINS_FINAL.md  CRITICAL_CACHE_FIX_EXPLAINED.md  CRITICAL_ENV_VARS_PER_DOMAIN.md  CRITICAL_PINET_DOMAIN_DISPLAY_FIX.md  CRITICAL_PI_APP_STUDIO_FIXES_COMPLETE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_CONFIRMATION.md  DEPLOYMENT_FIX_DETAILED.md  DEPLOYMENT_READINESS_REPORT.txt  (+171 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
NULL/: .modules.yaml
app/: .disabled  error.tsx  globals.css  layout.tsx  page.tsx
components/: PiButton.tsx  PiPayExample.tsx  PiPaymentButton.tsx  PiRPCExplorer.tsx  app-sidebar.tsx  artifact-actions.tsx  artifact-messages.tsx  artifact.tsx  chat-header.tsx  chat.tsx  code-editor.tsx  console.tsx  (+32 more)
services/contract-processor/: Cargo.toml  Dockerfile
services/contract-processor/src/: main.rs
(+740 files in other folders)
