[package]
name = "contract-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
